Fix notification styles
Description of problems:

 * Hover effect of text "clients" overlapped notification.

 * On mobile devices up to 480px, the notification was pressed to the
left edge without any padding.

 * On mobile devices up to 480px, the notification changed in height
during animation.

--- a/src/css/auth/_auth-notification.scss
+++ b/src/css/auth/_auth-notification.scss
@@ -5,6 +5,7 @@
 .notif {
 	position: fixed;
 	display: none;
+	z-index: 100;
 	border: install-border(2px, var(--color-gray-dark));
 	border-radius: var(--border-radius-small);
 	box-shadow: install-shadow(var(--color-gray-dark));
@@ -12,6 +13,10 @@
 	color: var(--color-black);
 	top: 5%;
 	right: -200%;
+	@include mobile-s {
+		width: 90%;
+		text-align: center;
+	}
 
 	&--is-success {
 		background-color: var(--color-green-notif);
